Fixed cloud overlap

--- a/themes/flexy/source/styles/screen.styl
+++ b/themes/flexy/source/styles/screen.styl
@@ -382,7 +382,7 @@ main
   // background $background-color
   // background-image linear-gradient(8deg, hsl(220, 100%, 12%), hsl(220, 40%, 4%) 50%)
 
-  animation fadeIn 1s ease-in-out 4.5s forwards;
+  //animation fadeIn 1s ease-in-out 4.5s forwards;
 
   background #010101
   height 100%
